fixed typos and some other minor changes

--- a/blog.html
+++ b/blog.html
@@ -92,7 +92,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">
-                Contact
+                Contact Us
               </a>
             </li>
           </ul>
@@ -413,7 +413,7 @@
                 <li>
                   <a
                     href="https://www.google.com/maps/place/Asansol,+West+Bengal/@23.6834541,86.8541898,11z/data=!3m1!4b1!4m5!3m4!1s0x39f71f0ea1022529:0xf888f7e7fd11cefe!8m2!3d23.6888636!4d86.9660638"><i
-                      class="fas fa-map-marked-alt"></i> Location: Asansol,India-713305</a>
+                      class="fas fa-map-marked-alt"></i> Location: Asansol, India-713305</a>
                 </li>
                 <li>
                   <a href="mailto:codeincommunity@gmail.com"><i class="fas fa-envelope"></i> Email:
