--- a/index.html
+++ b/index.html
@@ -1315,8 +1315,8 @@
           <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
             <h3 class="footer-titel">Quick Links</h3>
             <ul class="footer-link">
-              <li><a href="#hero-area">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="#hero-area">HomeMade</a></li>
+              <li><a href="#about">AboutPage</a></li>
               <li><a href="#testimonials">Team</a></li>
               <li><a href="#events">Events</a></li>
               <li><a href="#opportunity">Opportunity</a></li>
