I have added a testimonial section and updated the navbar and footer also.

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
               </a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#testimonial1">
+                Testimonials
+              </a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#opportunity">
                 Opportunity
               </a>
@@ -1123,6 +1128,154 @@
 
   <!-- counter ends -->
 
+  <!-- Testimonial Section Start -->
+  <section id="testimonial1" class="testimonial section-padding">
+
+    <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+      <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Valuable Testimonials</h2>
+      <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+    </div>
+    <div class="container" data-aos="fade-up" data-aos-duration="1500">
+      <div class="row justify-content-center">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div id="testimonials">
+            <div id="testimonials-slider">
+              <div class="swiper">
+                <div class="swiper-wrapper">
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Lorem Ipsum</h2>
+                        <h3>Mollit cupidatat in dolor excepteur culpa Lorem quis. Id et cillum aliqua tempor officia culpa consectetur sint eu nostrud. Fugiat voluptate nisi incididunt consequat. Ex aliquip veniam voluptate non sunt sint consectetur. Ex Lorem mollit nisi fugiat elit irure est aliquip. Cupidatat aliqua esse aliquip dolore quis consectetur Lorem tempor fugiat Lorem. Laborum laborum nostrud magna est esse ut consequat dolor veniam.</h3>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>David Leal
+                        </h2>
+                        <h3>Reprehenderit culpa ipsum dolore amet incididunt do magna nulla laboris veniam. Consequat officia mollit est ipsum aliqua aliquip pariatur consectetur. Qui eiusmod ipsum aliqua commodo. Labore duis velit mollit aliquip dolor. Nostrud amet officia laborum aute aute.</h3>
+                      </div>
+                    </div>
+                  </div>
+
+
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Lorem Ipsum</h2>
+                        <h3>Magna laborum exercitation aliqua aute eu velit aliquip voluptate ut. Laborum tempor ut sint eu laborum laborum sunt ea non anim. Ut nulla adipisicing aliquip ad do. Do quis fugiat minim et deserunt sit eu eiusmod do voluptate adipisicing nulla minim. Quis adipisicing elit anim exercitation do qui do anim magna tempor.</h3>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Lorem Ipsum</h2>
+                        <h3> Elit id occaecat eu incididunt consequat occaecat cupidatat amet duis enim. Duis fugiat minim nostrud non anim nostrud quis. Aliquip duis tempor esse veniam ex cillum esse ullamco officia voluptate consectetur duis sit ut. Ullamco elit anim occaecat tempor ex ullamco officia ea anim nulla id eiusmod. Ipsum ea dolor quis proident.</h3>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Lorem Ipsum</h2>
+                        <h3>Duis sint sit fugiat nostrud est amet id aliqua qui consectetur qui ex sunt sint. Culpa pariatur ipsum elit dolore velit duis mollit consectetur Lorem. Aute non laborum aliquip officia fugiat ipsum sit cupidatat voluptate excepteur ut veniam cupidatat.</h3>
+                      </div>
+
+                    </div>
+                  </div>
+
+
+
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Lorem Ipsum</h2>
+                        <h3>Exercitation incididunt voluptate ea laboris enim cupidatat fugiat est et. Ullamco fugiat pariatur culpa laboris cupidatat velit. Qui do veniam ad sint duis ex ea dolore amet ipsum eu. Qui ipsum id cillum non dolore qui non aute. Aliquip excepteur laborum anim reprehenderit consectetur elit deserunt.</h3>
+                      </div>
+
+                    </div>
+                  </div>
+
+
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Lorem Ipsum</h2>
+                        <h3> Ipsum minim mollit sint occaecat duis excepteur est irure minim. Do dolor eiusmod ea cupidatat Lorem elit in non. Sunt quis ex mollit consequat in incididunt velit duis commodo et eiusmod enim deserunt. Ipsum aliqua id ut non cupidatat fugiat aliquip exercitation.</h3>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2>Lorem Ipsum</h2>
+                        <h3>Nisi anim ipsum officia mollit mollit ad nisi deserunt magna nisi eu duis est. Excepteur ipsum incididunt nulla aliquip exercitation voluptate. Tempor aliquip esse esse proident duis et tempor nulla veniam. Consectetur eiusmod et dolore labore nulla ex dolor magna nisi nisi minim. Ullamco quis nostrud sunt eu irure reprehenderit do enim qui. Et ad ea Lorem fugiat magna reprehenderit est tempor sint in veniam. Ex aliquip tempor mollit nostrud ut et.</h3>
+                      </div>
+
+                    </div>
+                  </div>
+
+                  <div class="swiper-slide">
+                    <div class="testimonial-item">
+                      <div class="img-thumb">
+                        <img src="./assets/img/team/david.png" alt="">
+                      </div>
+                      <div class="info">
+                        <h2> Lorem Ipsum </h2>
+                        <h3> Excepteur laboris amet eiusmod deserunt eu culpa elit veniam non eu velit laboris adipisicing deserunt. Non ea nostrud ipsum cupidatat exercitation eiusmod ea elit officia nostrud. Eiusmod irure dolor aliqua eiusmod in id mollit cillum quis non tempor voluptate occaecat mollit. Dolore anim anim duis do nostrud cillum dolor sit cillum magna ex incididunt.</h3>
+                      </div>
+
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </section>
+
   <!---- Sponsors
     ==================================== -->
     <div class="community_partner">
@@ -1319,6 +1472,7 @@
               <li><a href="#about">About</a></li>
               <li><a href="#testimonials">Team</a></li>
               <li><a href="#events">Events</a></li>
+              <li><a href="#testimonial1">Testimonials</a></li>
               <li><a href="#opportunity">Opportunity</a></li>
             </ul>
           </div>
