opprutunities responsiveness added

--- a/index.html
+++ b/index.html
@@ -1044,7 +1044,7 @@
 		</div>
 		<br>
 
-		<div class="oppurtunity_section" style="display: flex;flex-direction:row;flex-wrap: wrap;">
+		<div class="oppurtunity_section">
 
 			<div class="card">
 				<img class="card-img-top" src="./assets/img/opportunity/opp-1.jpg" alt="Card image cap">
