--- a/opportunity.html
+++ b/opportunity.html
@@ -48,9 +48,39 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto w-100 justify-content-end clearfix">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">
                                 Home
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/#about">
+                                About
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/#testimonials">
+                                Team
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/#events">
+                                Events
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./opportunity.html">
+                                Opportunity
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/#blog">
+                                Blogs
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/#contact">
+                                Contact
                             </a>
                         </li>
                     </ul>
@@ -58,6 +88,8 @@
             </div>
         </nav>
         <!-- Navbar End -->
+
+
     </header>
     <br><br><br>
     <!-- Navbar End -->
