oppurtunity section modified in index.html and oppurtunity page modified

--- a/index.html
+++ b/index.html
@@ -1050,34 +1050,11 @@
 				<img class="card-img-top" src="./assets/img/opportunity/opp-1.jpg" alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">Google Developer Student Clubs is come up with GDSC WOW</h5>
-					<button class="btn btn-common opportunity_btn" type="button" data-toggle="collapse"
-						data-target="#opp1" aria-expanded="false" aria-controls="opp1">
+					<a href="./opportunity.html" class="btn btn-common opportunity_btn" type="button">
 						Read More
-					</button>
+					</a>
 					<br> <br>
 					</p>
-					<div class="collapse" id="opp1">
-						<ul style="list-style-type:square">
-							<li> GDSC WOW (Wonder of Wonders) 2021 is
-								a 3-day long virtual event consisting of webinars covering various topics of the
-								latest
-								technologies and
-								the treasure hunt game - Treasure to WOW which will run through the event.
-								Doesn't it sound exciting??? The wait is over 🤩 <br>
-							</li>
-							<li> <br>GDSC WOW is a collaborative event of 200+ GDSCs from India✨✨, who have
-								joined hands to bring together students, developers, and communities
-								under the same roof. This event will act as a platform to attain knowledge
-								and work on projects with experts in real-time. It will help beginners take
-								a step towards their technical careers.
-								Registrations are open now!! <br>
-							</li>
-							<li> <br>Register here🔥: <a href=" https://gdscwow.tech/register">
-									https://gdscwow.tech/register</a>
-							</li>
-							<br>
-						</ul>
-					</div>
 				</div>
 			</div>
 
@@ -1085,46 +1062,11 @@
 				<img class="card-img-top" src="./assets/img/opportunity/opp-2.png" alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">Spark-a-thon a hackathon- By CodeIN Community</h5>
-					<button class="btn btn-common opportunity_btn" type="button" data-toggle="collapse"
-						data-target="#opp2" aria-expanded="false" aria-controls="opp2">
+					<a href="./opportunity.html" class="btn btn-common opportunity_btn" type="button">
 						Read More
-					</button>
+					</a>
 					<br> <br>
 					</p>
-					<div class="collapse" id="opp2">
-						<ul>
-							<li>
-								Complete the challenge by creating a simple project guided by us and earn a
-								limited
-								edition Backpack by Spark AR.</li>
-							<li>
-								<br>How is Spark-a-thon different? <br>
-							</li>
-							<li>
-								🌟 This is a No-code hackathon <br></li>
-							<li>
-								🌟 Every participant who submit a project will be getting a backpack as well as a
-								certificate <br></li>
-							<li>
-								🌟 Top 3 best AR projects will be cash prizes of $300, $200 & $100 <br></li>
-							<li>
-								🌟 No prior knowledge is required to participate in this hackathon <br></li>
-							<li>
-								🌟 The hackathon is totally AR-based <br></li>
-							<li>
-								📌 Register here: <a
-									href="https://bit.ly/spark-a-thon-codein">https://bit.ly/spark-a-thon-codein</a>
-								<br>
-							</li>
-							<li>
-								<br>📌 Join the Community groups for further announcements and we will help you to
-								make
-								your
-								project:
-							</li>
-							❄️Telegram : <a href="https://t.me/CodeINCommunity">https://t.me/CodeINCommunity</a>
-						</ul>
-					</div>
 				</div>
 			</div>
 
@@ -1132,49 +1074,11 @@
 				<img class="card-img-top" src="./assets/img/opportunity/codein.png" alt="Card image cap">
 				<div class="card-body">
 					<h5 class="card-title">Winter Fest 2022 🧑‍💻</h5>
-					<button class="btn btn-common opportunity_btn" type="button" data-toggle="collapse"
-						data-target="#opp3" aria-expanded="false" aria-controls="opp3">
+					<a href="./opportunity.html" class="btn btn-common opportunity_btn" type="button">
 						Read More
-					</button>
+					</a>
 					<br> <br>
 					</p>
-					<div class="collapse" id="opp3">
-						<ul>
-							<li>
-								CodeIN community is organizing the much-awaited "Winter Fest" on 19th
-								February.
-								This will be a 4-hour long event on DSA, Web Dev, App Dev, Cloud Computing and
-								Community Discussions and win exciting rewards for Each Track🎁.</li>
-							<li>
-								Winter Fest will consist of quizzes, contests, and rewards as well. Here are the
-								benefits of
-								joining the
-								session;</li>
-							<li>
-								<ul>
-									<li>
-										- Rs 300 worth GeeksforGeeks coupon Voucher to every participant.🤩</li>
-									<li>
-										- 10K worth Giveaway During the DSA Session 🙌</li>
-									<li>
-										- Swags and Goodies by GFG for Web Dev and Android Track Quiz Winners 🥳</li>
-									<li>
-										- Verified Certificates for Each Participant. 📑</li>
-									<li>
-										- Goodies from Azure developer Community for the Cloud Track🎁</li>
-								</ul>
-							</li>
-							<li>
-								The fest is based on technical skills and sponsored by GeeksforGeeks,
-								Give my certificate and Microsoft Azure Developer Community..
-								For Updates regarding the event join us here⏰:
-								_
-							</li>
-							<br>📄 Register here 🙌
-							<a href="  https://reskilll.com/event/codeinewinterfest">
-								https://reskilll.com/event/codeinewinterfest</a> <br>
-						</ul>
-					</div>
 				</div>
 			</div>
 
