--- a/opportunity.html
+++ b/opportunity.html
@@ -93,74 +93,139 @@
     </header>
     <br><br><br>
     <!-- Navbar End -->
-    <section id="opportunity" class="section-padding bg-gray">
-        <div class="container">
-            <div class="section-header text-center">
-                <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Opportunity</h2>
-                <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-            </div>
-            <div class="card-group">
-                <div class="card">
-                    <img src="./assets/img/Event/event1.png" class="card-img-top" alt="..." height="350px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Event/event2.png" class="card-img-top" alt="..." height="350px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Event/event3.png" class="card-img-top" alt="..." height="350px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-            </div>
-            <div class="card-group">
-                <div class="card">
-                    <img src="./assets/img/Event/event1.png" class="card-img-top" alt="..." height="350px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Event/event2.png" class="card-img-top" alt="..." height="350px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
-                            content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img src="./assets/img/Event/event3.png" class="card-img-top" alt="..." height="350px">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                            additional content. This card has even longer content than the first to show that equal
-                            height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                    </div>
-                </div>
-            </div>
+    <section id="opportunity" class="section-padding bg-white">
+        <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+            <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Opportunities</h2>
+            <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
         </div>
+        <br>
+
+        <div class="oppurtunity_section">
+
+            <div class="card">
+                <img class="card-img-top" src="./assets/img/opportunity/opp-1.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Google Developer Student Clubs is come up with GDSC WOW</h5>
+                    <br> <br>
+                    </p>
+                    <ul style="list-style-type:square">
+                        <li> GDSC WOW (Wonder of Wonders) 2021 is
+                            a 3-day long virtual event consisting of webinars covering various topics of the
+                            latest
+                            technologies and
+                            the treasure hunt game - Treasure to WOW which will run through the event.
+                            Doesn't it sound exciting??? The wait is over 🤩 <br>
+                        </li>
+                        <li> <br>GDSC WOW is a collaborative event of 200+ GDSCs from India✨✨, who have
+                            joined hands to bring together students, developers, and communities
+                            under the same roof. This event will act as a platform to attain knowledge
+                            and work on projects with experts in real-time. It will help beginners take
+                            a step towards their technical careers.
+                            Registrations are open now!! <br>
+                        </li>
+                        <li> <br>Register here🔥: <a href=" https://gdscwow.tech/register">
+                                https://gdscwow.tech/register</a>
+                        </li>
+                        <br>
+                    </ul>
+                    <br>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="./assets/img/opportunity/opp-2.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Spark-a-thon a hackathon- By CodeIN Community</h5>
+                    <br> <br>
+                    </p>
+                    <ul>
+                        <li>
+                            Complete the challenge by creating a simple project guided by us and earn a
+                            limited
+                            edition Backpack by Spark AR.</li>
+                        <li>
+                            <br>How is Spark-a-thon different? <br>
+                        </li>
+                        <li>
+                            🌟 This is a No-code hackathon <br></li>
+                        <li>
+                            🌟 Every participant who submit a project will be getting a backpack as well as a
+                            certificate <br></li>
+                        <li>
+                            🌟 Top 3 best AR projects will be cash prizes of $300, $200 & $100 <br></li>
+                        <li>
+                            🌟 No prior knowledge is required to participate in this hackathon <br></li>
+                        <li>
+                            🌟 The hackathon is totally AR-based <br></li>
+                        <li>
+                            📌 Register here: <a
+                                href="https://bit.ly/spark-a-thon-codein">https://bit.ly/spark-a-thon-codein</a>
+                            <br>
+                        </li>
+                        <li>
+                            <br>📌 Join the Community groups for further announcements and we will help you to
+                            make
+                            your
+                            project:
+                        </li>
+                        ❄️Telegram : <a href="https://t.me/CodeINCommunity">https://t.me/CodeINCommunity</a>
+                    </ul>
+                    <br>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="./assets/img/opportunity/codein.png" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Winter Fest 2022 🧑‍💻</h5>
+                    <br>
+                    </p>
+                    <ul>
+                        <li>
+                            CodeIN community is organizing the much-awaited "Winter Fest" on 19th
+                            February.
+                            This will be a 4-hour long event on DSA, Web Dev, App Dev, Cloud Computing and
+                            Community Discussions and win exciting rewards for Each Track🎁.</li>
+                        <li>
+                            Winter Fest will consist of quizzes, contests, and rewards as well. Here are the
+                            benefits of
+                            joining the
+                            session;</li>
+                        <li>
+                            <ul>
+                                <li>
+                                    - Rs 300 worth GeeksforGeeks coupon Voucher to every participant.🤩</li>
+                                <li>
+                                    - 10K worth Giveaway During the DSA Session 🙌</li>
+                                <li>
+                                    - Swags and Goodies by GFG for Web Dev and Android Track Quiz Winners 🥳</li>
+                                <li>
+                                    - Verified Certificates for Each Participant. 📑</li>
+                                <li>
+                                    - Goodies from Azure developer Community for the Cloud Track🎁</li>
+                            </ul>
+                        </li>
+                        <li>
+                            The fest is based on technical skills and sponsored by GeeksforGeeks,
+                            Give my certificate and Microsoft Azure Developer Community..
+                            For Updates regarding the event join us here⏰:
+                            _
+                        </li>
+                        <br>📄 Register here 🙌
+                        <a href="  https://reskilll.com/event/codeinewinterfest">
+                            https://reskilll.com/event/codeinewinterfest</a> <br>
+                    </ul>
+                    <br>
+                </div>
+            </div>
+
+        </div>
+
+        <br>
+        <br>
+
     </section>
+
     <!-- Footer Section Start -->
     <footer id="footer" class="footer-area section-padding">
         <div class="container">
