fixes the team section cards

--- a/index.html
+++ b/index.html
@@ -964,10 +964,11 @@
 
 								</div>
 							</div>
-
 						</div>
 					</div>
 				</div>
+						<div class="swiper-button-next"></div>
+     					<div class="swiper-button-prev"></div>
 			</div>
 		</div>
 
@@ -1552,7 +1553,7 @@
 	<script src="assets/js/contact-form-script.min.js"></script>
 
 	<!--Swiper JS-->
-	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 	<script src="assets/js/swipper.js"></script>
 
 	<!-- Vanilla Tilt -->
