--- a/opportunity.html
+++ b/opportunity.html
@@ -5,6 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Opportunities page of CodeIN-Community-Website">
 
     <title>CodeIN Community </title>
 
