--- a/benefit.html
+++ b/benefit.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Benefits of joining the CodeIN-Community">
     <title>Benefits of Joining Us</title>
     
 
